--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inès Zaït — Portfolio</title>
+  <title>Nawel ZAIT</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     /* ======== RESET ======== */
@@ -123,34 +123,47 @@
 
 <body>
   <header>
-    <h1>Inès Zaït</h1>
-    <p class="subtitle">Étudiante en M1 IPP — École Polytechnique</p>
+    <h1>Nawel ZAIT</h1>
+    <p class="subtitle">AI & Data Science – Institut Polytechnique de Paris</p>
     <p style="margin-top:20px; color:#b0b9cc;">
-      Passionnée par la <strong>cryptologie</strong>, la <strong>sécurité informatique</strong> et le <strong>machine learning appliqué</strong>.<br>
-      Intéressée par les applications de la recherche à l’innovation technologique.
+     Final-year master's student seeking a 6-month internship and full-time position in AI, ML, or Data Science.
     </p>
   </header>
 
-  <section id="academic">
-    <h2>📘 Projets Académiques</h2>
-    <div class="projects">
-      <div class="card">
-        <h3>🔐 AES Diffusion Analysis</h3>
-        <p>Analyse de la propriété de diffusion de l’AES via des tests bit-à-bit et implémentation complète en C.</p>
-        <p><a href="https://github.com/ineszait/AES-diffusion-analysis" target="_blank">Voir sur GitHub →</a></p>
-      </div>
-      <div class="card">
-        <h3>🧮 Quadratic Sieve</h3>
-        <p>Implémentation du crible quadratique pour la factorisation de grands nombres semi-premiers (projet INF558).</p>
-        <p><a href="https://github.com/ineszait/Quadratic-Sieve" target="_blank">Voir sur GitHub →</a></p>
-      </div>
-      <div class="card">
-        <h3>🌲 Decision Tree from Scratch</h3>
-        <p>Construction d’un arbre de régression à partir de zéro et comparaison avec les modèles scikit-learn sur Boston Housing.</p>
-        <p><a href="https://github.com/ineszait/Decision-Tree-from-scratch" target="_blank">Voir sur GitHub →</a></p>
-      </div>
+  <h2>Selected Academic Projects</h2>
+  <div class="projects">
+  
+    <div class="card">
+      <h3>Medical Text Summarization with Language Models</h3>
+      <p>Fine-tuned a small language model to summarize French medical documents. Built a corpus of 5,000 texts and generated synthetic summaries using LLMs. Focused on semantic accuracy and terminology handling.</p>
+      <p><a href="https://github.com/ineszait/medical-text-summarization" target="_blank">View on GitHub →</a></p>
     </div>
-  </section>
+  
+    <div class="card">
+      <h3>Content-Based Image Retrieval with Bag-of-Features</h3>
+      <p>Built a full CBIR pipeline using local/global visual descriptors (DAISY, BRIEF, VGG16), K-Means clustering, and cosine similarity. Compared multiple methods to optimize retrieval performance.</p>
+      <p><a href="https://github.com/ineszait/cbir-bag-of-features" target="_blank">View on GitHub →</a></p>
+    </div>
+  
+    <div class="card">
+      <h3>Neural Modeling of Screen-Induced Health Disruptions</h3>
+      <p>Explored the effects of screen overexposure on student well-being using Neural ODEs, LSTM, and GRU. Worked with physiological time-series data to predict stress, sleep quality, and attention shifts.</p>
+      <p><a href="https://github.com/ineszait/screen-exposure-modeling" target="_blank">View on GitHub →</a></p>
+    </div>
+  
+    <div class="card">
+      <h3>Text-to-SQL using Language Models</h3>
+      <p>Explored prompt engineering techniques to translate natural language into SQL queries. Compared rule-based and LLM approaches for query accuracy and adaptability to structured data domains.</p>
+      <p><a href="https://github.com/ineszait/text-to-sql" target="_blank">View on GitHub →</a></p>
+    </div>
+  
+    <div class="card">
+      <h3>Reinforcement Learning for Quoridor AI</h3>
+      <p>Developed RL agents for the game Quoridor using Minimax and Monte Carlo Tree Search. Introduced a path obstruction heuristic to improve strategic decision-making and gameplay efficiency.</p>
+      <p><a href="https://github.com/ineszait/quoridor-ai" target="_blank">View on GitHub →</a></p>
+    </div>
+  
+  </div>
 
   <section id="research">
     <h2>🧠 Projets de Recherche</h2>
