Revise academic projects section in index.html
Updated project descriptions and added new projects.

--- a/index.html
+++ b/index.html
@@ -129,57 +129,61 @@
      Final-year master's student seeking a 6-month internship and full-time position in AI, ML, or Data Science.
     </p>
   </header>
+<h2>Selected Academic Projects</h2>
+<div class="projects">
 
-  <h2>Selected Academic Projects</h2>
-  <div class="projects">
-  
-    <div class="card">
-      <h3>Medical Text Summarization with Language Models</h3>
-      <p>Fine-tuned a small language model to summarize French medical documents. Built a corpus of 5,000 texts and generated synthetic summaries using LLMs. Focused on semantic accuracy and terminology handling.</p>
-      <p><a href="https://github.com/ineszait/medical-text-summarization" target="_blank">View on GitHub →</a></p>
-    </div>
-  
-    <div class="card">
-      <h3>Content-Based Image Retrieval with Bag-of-Features</h3>
-      <p>Built a full CBIR pipeline using local/global visual descriptors (DAISY, BRIEF, VGG16), K-Means clustering, and cosine similarity. Compared multiple methods to optimize retrieval performance.</p>
-      <p><a href="https://github.com/ineszait/cbir-bag-of-features" target="_blank">View on GitHub →</a></p>
-    </div>
-  
-    <div class="card">
-      <h3>Neural Modeling of Screen-Induced Health Disruptions</h3>
-      <p>Explored the effects of screen overexposure on student well-being using Neural ODEs, LSTM, and GRU. Worked with physiological time-series data to predict stress, sleep quality, and attention shifts.</p>
-      <p><a href="https://github.com/ineszait/screen-exposure-modeling" target="_blank">View on GitHub →</a></p>
-    </div>
-  
-    <div class="card">
-      <h3>Text-to-SQL using Language Models</h3>
-      <p>Explored prompt engineering techniques to translate natural language into SQL queries. Compared rule-based and LLM approaches for query accuracy and adaptability to structured data domains.</p>
-      <p><a href="https://github.com/ineszait/text-to-sql" target="_blank">View on GitHub →</a></p>
-    </div>
-  
-    <div class="card">
-      <h3>Reinforcement Learning for Quoridor AI</h3>
-      <p>Developed RL agents for the game Quoridor using Minimax and Monte Carlo Tree Search. Introduced a path obstruction heuristic to improve strategic decision-making and gameplay efficiency.</p>
-      <p><a href="https://github.com/ineszait/quoridor-ai" target="_blank">View on GitHub →</a></p>
-    </div>
-  
+  <div class="card">
+    <h3>Medical Text Summarization with Language Models</h3>
+    <p>Fine-tuned a small language model to summarize French medical documents. Built a corpus of 5,000 texts and generated synthetic summaries using LLMs. Focused on semantic accuracy and terminology handling.</p>
+    <p><a href="https://github.com/ineszait/medical-text-summarization" target="_blank">View on GitHub →</a></p>
   </div>
 
-  <section id="research">
-    <h2>🧠 Projets de Recherche</h2>
-    <div class="projects">
-      <div class="card">
-        <h3>🔭 Cryptographic Diffusion Study</h3>
-        <p>Étude expérimentale de la propagation des différences dans les algorithmes de chiffrement par blocs.</p>
-        <p><a href="#" target="_blank">En préparation</a></p>
-      </div>
-      <div class="card">
-        <h3>💡 Metrics and Distances in ML</h3>
-        <p>Exploration des distances et métriques en apprentissage supervisé et leur impact sur les modèles de régression.</p>
-        <p><a href="#" target="_blank">À venir</a></p>
-      </div>
+  <div class="card">
+    <h3>Content-Based Image Retrieval with Bag-of-Features</h3>
+    <p>Built a full CBIR pipeline using local/global visual descriptors (DAISY, BRIEF, VGG16), K-Means clustering, and cosine similarity. Compared multiple methods to optimize retrieval performance.</p>
+    <p><a href="https://github.com/ineszait/cbir-bag-of-features" target="_blank">View on GitHub →</a></p>
+  </div>
+
+  <div class="card">
+    <h3>Sub-Event Detection in FIFA World Cup Tweets</h3>
+    <p>Developed ML models to detect sub-events (goals, red cards) from live tweet streams using logistic regression and GloVe embeddings. Focused on temporal segmentation and text classification accuracy.</p>
+    <p><a href="https://github.com/ineszait/fifa-subevent-detection" target="_blank">View on GitHub →</a></p>
+  </div>
+
+  <div class="card">
+    <h3>Text-to-SQL using Language Models</h3>
+    <p>Explored prompt engineering techniques to translate natural language into SQL queries. Compared rule-based and LLM approaches for query accuracy and adaptability to structured data domains.</p>
+    <p><a href="https://github.com/ineszait/text-to-sql" target="_blank">View on GitHub →</a></p>
+  </div>
+
+  <div class="card">
+    <h3>Reinforcement Learning for Quoridor AI</h3>
+    <p>Developed RL agents for the game Quoridor using Minimax and Monte Carlo Tree Search. Introduced a path obstruction heuristic to improve strategic decision-making and gameplay efficiency.</p>
+    <p><a href="https://github.com/ineszait/quoridor-ai" target="_blank">View on GitHub →</a></p>
+  </div>
+
+</div>
+
+<section id="research">
+  <h2>Research Projects</h2>
+  <div class="projects">
+
+    <div class="card">
+      <h3>Neural Modeling of Screen-Induced Health Disruptions</h3>
+      <p>Developed neural models (Neural ODEs, LSTM, GRU) to predict the psychological and physiological effects of screen overexposure using time-series data from GLOBEM. Focused on stress, attention, sleep, and social isolation.</p>
+      <p><a href="https://github.com/ineszait/screen-exposure-modeling" target="_blank">View on GitHub →</a></p>
     </div>
-  </section>
+
+    <div class="card">
+      <h3>🔭 Cryptographic Diffusion Study</h3>
+      <p>Experimental study of diffusion properties in block cipher algorithms using bit-level propagation analysis.</p>
+      <p><a href="#" target="_blank">Coming soon</a></p>
+    </div>
+
+
+  </div>
+</section>
+
 
   <section id="contact">
     <h2>📬 Contact</h2>
