--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <header>
   <h1>Nawel ZAIT</h1>
   <p class="subtitle">AI & Data Science – Institut Polytechnique de Paris</p>
-  <p class="intro">Final-year master's student seeking a 6-month internship and full-time position in AI, ML, or Data Science.</p>
+  <p class="intro">Final-year master's student seeking a 6-month internship and full-time position in Artificial Intelligence, Machine Learning, or Data Science.</p>
 </header>
 
 <section>
