--- a/index.html
+++ b/index.html
@@ -1,166 +1,180 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nawel ZAIT</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nawel ZAIT – AI & Data Science</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet" />
   <style>
+    /* ======= RESET & BASE ======= */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-  
+
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: #0c0f14;
+      font-family: 'Space Grotesk', sans-serif;
+      background-color: #0c0c0e;
       color: #e0e0e0;
-      line-height: 1.7;
+      line-height: 1.6;
       padding-bottom: 100px;
     }
-  
+
     a {
-      color: #7aa9ff;
+      color: #8fa7ff;
       text-decoration: none;
     }
-  
+
     a:hover {
       text-decoration: underline;
     }
-  
+
     header {
       text-align: center;
       padding: 100px 20px 60px;
     }
-  
+
     h1 {
-      font-size: 2.5em;
+      font-size: 2.8em;
       font-weight: 600;
+      letter-spacing: -0.5px;
     }
-  
+
     .subtitle {
-      font-size: 1.2em;
-      color: #aabbd4;
-      margin-top: 10px;
+      font-size: 1.1em;
+      color: #b3b8c2;
+      margin-top: 12px;
     }
-  
+
     .intro {
-      color: #b0b9cc;
-      margin-top: 20px;
+      color: #c0c3cc;
+      margin-top: 18px;
       font-size: 1em;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
-  
+
     section {
-      max-width: 880px;
+      max-width: 860px;
       margin: auto;
       padding: 60px 20px;
     }
-  
+
     h2 {
       font-size: 1.6em;
       font-weight: 500;
-      color: #7aa9ff;
-      text-align: left;
+      color: #ccd3e0;
       margin-bottom: 32px;
+      border-left: 4px solid #8fa7ff;
+      padding-left: 14px;
     }
-  
+
     .projects {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 30px;
+      gap: 40px;
     }
-  
+
     @media (min-width: 700px) {
       .projects {
         grid-template-columns: 1fr 1fr;
       }
     }
-  
+
     .card {
-      background: #11151f;
-      padding: 20px 24px;
+      background: #121416;
+      padding: 24px;
       border-radius: 10px;
-      border: 1px solid #1e2738;
+      border: 1px solid #1f2125;
+      transition: border 0.3s ease;
     }
-  
+
+    .card:hover {
+      border-color: #3b4252;
+    }
+
     .card h3 {
       font-size: 1.1em;
-      font-weight: 600;
-      color: #7aa9ff;
-      margin-bottom: 8px;
-    }
-  
-    .card p {
-      font-size: 0.95em;
-      color: #c4c7cc;
+      font-weight: 500;
+      color: #aabaff;
       margin-bottom: 10px;
     }
-  
+
+    .card p {
+      font-size: 0.95em;
+      color: #c6c9cf;
+      margin-bottom: 10px;
+      line-height: 1.5;
+    }
+
     footer {
       text-align: center;
-      color: #7a889f;
+      color: #7a7f89;
       font-size: 0.9em;
       padding: 40px 0 20px;
     }
   </style>
 </head>
-<header>
-  <h1>Nawel ZAIT</h1>
-  <p class="subtitle">AI & Data Science – Institut Polytechnique de Paris</p>
-  <p class="intro">Final-year master's student seeking a 6-month internship and full-time position in Artificial Intelligence, Machine Learning, or Data Science.</p>
-</header>
 
-<section>
-  <h2>Selected Academic Projects</h2>
-  <div class="projects">
+<body>
+  <header>
+    <h1>Nawel ZAIT</h1>
+    <p class="subtitle">AI & Data Science – Institut Polytechnique de Paris</p>
+    <p class="intro">
+      Final-year Master's student seeking a 6-month research internship and full-time position in Artificial Intelligence, Machine Learning, or Data Science.
+    </p>
+  </header>
 
-    <div class="card">
-      <h3>Fine-Tuning a Small Language Model for Medical Text Summarization</h3>
-      <p>Fine-tuned a small language model to summarize French medical documents. Used synthetic data from LLMs and focused on semantic accuracy.</p>
-      <p><a href="https://github.com/ineszait/medical-text-summarization" target="_blank">View on GitHub →</a></p>
+  <section>
+    <h2>Selected Academic Projects</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>Fine-Tuning a Small Language Model for Medical Text Summarization</h3>
+        <p>Trained a lightweight transformer model to generate summaries of French medical reports using synthetic data. Focused on domain-specific terminology and semantic preservation.</p>
+        <p><a href="https://github.com/ineszait/medical-text-summarization" target="_blank">View on GitHub →</a></p>
+      </div>
+
+      <div class="card">
+        <h3>Sub-Event Detection in FIFA World Cup Tweets</h3>
+        <p>Built models to detect events (e.g., goals, red cards) from live tweet streams. Used GloVe embeddings with logistic regression and minute-based segmentation.</p>
+        <p><a href="https://github.com/ineszait/fifa-subevent-detection" target="_blank">View on GitHub →</a></p>
+      </div>
+
+      <div class="card">
+        <h3>Text-to-SQL using Language Models</h3>
+        <p>Explored prompt engineering and few-shot learning to translate natural language questions into SQL queries. Compared rule-based and neural approaches on benchmark databases.</p>
+        <p><a href="https://github.com/ineszait/text-to-sql" target="_blank">View on GitHub →</a></p>
+      </div>
+
+      <div class="card">
+        <h3>Reinforcement Learning for Quoridor AI</h3>
+        <p>Implemented RL agents using Minimax and MCTS to play Quoridor. Introduced heuristics for wall placement and path blocking to improve strategic behavior.</p>
+        <p><a href="https://github.com/ineszait/quoridor-ai" target="_blank">View on GitHub →</a></p>
+      </div>
     </div>
+  </section>
 
-    <div class="card">
-      <h3>Sub-Event Detection in FIFA World Cup Tweets</h3>
-      <p>Developed ML models to detect sub-events (goals, red cards) from live tweets using GloVe embeddings and logistic regression.</p>
-      <p><a href="https://github.com/ineszait/fifa-subevent-detection" target="_blank">View on GitHub →</a></p>
+  <section id="research">
+    <h2>Research Projects</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>Neural Modeling of Screen-Induced Health Disruptions</h3>
+        <p>Bridged neuroscience and AI by modeling the effects of screen exposure using Neural ODEs, LSTMs, and GRUs. Used time-series data to predict stress, attention, and sleep quality.</p>
+        <p><a href="https://github.com/ineszait/screen-exposure-modeling" target="_blank">View on GitHub →</a></p>
+      </div>
+
+      <div class="card">
+        <h3>Adversarial Learning for Cryptographic Protocol Analysis</h3>
+        <p>Applied adversarial ML to test the robustness of cryptographic protocols. Designed adaptive attack strategies to expose vulnerabilities and inform secure protocol design.</p>
+        <p><a href="#" target="_blank">Coming soon</a></p>
+      </div>
     </div>
+  </section>
 
-    <div class="card">
-      <h3>Text-to-SQL using Language Models</h3>
-      <p>Prompt-engineered LLMs to convert natural language into SQL. Compared rule-based and neural approaches for structured data querying.</p>
-      <p><a href="https://github.com/ineszait/text-to-sql" target="_blank">View on GitHub →</a></p>
-    </div>
-
-    <div class="card">
-      <h3>Reinforcement Learning for Quoridor AI</h3>
-      <p>Built RL agents with Minimax and MCTS. Introduced path-obstruction heuristics to enhance gameplay strategy.</p>
-      <p><a href="https://github.com/ineszait/quoridor-ai" target="_blank">View on GitHub →</a></p>
-    </div>
-
-  </div>
-</section>
-
-<section id="research">
-  <h2>Research Projects</h2>
-  <div class="projects">
-
-    <div class="card">
-      <h3>Neural Modeling of Screen-Induced Health Disruptions</h3>
-      <p>Combined neuroscience insights and AI by developing Neural ODEs, LSTM, and GRU models to predict how excessive screen time affects stress, sleep, attention, and cognitive functions. Utilized time-series data from the GLOBEM dataset.</p>
-      <p><a href="https://github.com/ineszait/screen-exposure-modeling" target="_blank">View on GitHub →</a></p>
-    </div>
-
-    <div class="card">
-      <h3>Adversarial Learning for Cryptographic Protocol Analysis</h3>
-      <p>Applied adversarial machine learning to test the resilience of cryptographic protocols, generating adaptive attack strategies to uncover protocol weaknesses and improve security evaluation.</p>
-      <p><a href="#" target="_blank">Coming soon</a></p>
-    </div>
-
-  </div>
-</section>
-
-<footer>
-  © Nawel ZAIT · 2025
-</footer>
+  <footer>
+    © Nawel ZAIT · 2025
+  </footer>
+</body>
+</html>
