--- a/index.html
+++ b/index.html
@@ -2,129 +2,162 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nawel ZAIT – AI & Data Science</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Nawel ZAIT — AI Portfolio</title>
+  
+  <!-- Font: Satoshi (elegant, modern, refined) -->
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap" rel="stylesheet">
+  
   <style>
-    /* ======= RESET & BASE ======= */
-    * {
+    /* RESET */
+    *, *::before, *::after {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
 
     body {
-      font-family: 'Space Grotesk', sans-serif;
-      background-color: #0c0c0e;
-      color: #e0e0e0;
-      line-height: 1.6;
-      padding-bottom: 100px;
+      font-family: 'Satoshi', sans-serif;
+      background-color: #0d1117;
+      color: #d0d6e0;
+      line-height: 1.7;
+      font-size: 16px;
+      scroll-behavior: smooth;
     }
 
     a {
-      color: #8fa7ff;
+      color: #4ea0f3;
       text-decoration: none;
+      transition: color 0.2s ease;
     }
 
     a:hover {
-      text-decoration: underline;
+      color: #77b6ff;
     }
 
     header {
+      padding: 100px 20px 40px;
       text-align: center;
-      padding: 100px 20px 60px;
+      position: relative;
+    }
+
+    header::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 2px;
+      background: linear-gradient(to right, #1f6feb, #3fb6ff);
+      margin-top: 20px;
     }
 
     h1 {
-      font-size: 2.8em;
-      font-weight: 600;
-      letter-spacing: -0.5px;
+      font-size: 2.8rem;
+      font-weight: 700;
+      color: #ffffff;
+      margin-bottom: 10px;
     }
 
     .subtitle {
-      font-size: 1.1em;
-      color: #b3b8c2;
-      margin-top: 12px;
+      font-size: 1.2rem;
+      color: #9db2ce;
     }
 
     .intro {
-      color: #c0c3cc;
-      margin-top: 18px;
-      font-size: 1em;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
+      font-size: 1rem;
+      margin-top: 20px;
+      color: #a7b3c8;
     }
 
     section {
-      max-width: 860px;
-      margin: auto;
-      padding: 60px 20px;
+      max-width: 900px;
+      margin: 80px auto;
+      padding: 0 20px;
+      position: relative;
+    }
+
+    section::before {
+      content: "";
+      position: absolute;
+      top: -40px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #1b1f27;
     }
 
     h2 {
-      font-size: 1.6em;
-      font-weight: 500;
-      color: #ccd3e0;
-      margin-bottom: 32px;
-      border-left: 4px solid #8fa7ff;
-      padding-left: 14px;
+      font-size: 1.6rem;
+      font-weight: 600;
+      color: #4ea0f3;
+      margin-bottom: 40px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     .projects {
       display: grid;
-      grid-template-columns: 1fr;
-      gap: 40px;
-    }
-
-    @media (min-width: 700px) {
-      .projects {
-        grid-template-columns: 1fr 1fr;
-      }
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 30px;
     }
 
     .card {
-      background: #121416;
-      padding: 24px;
+      background-color: #11161e;
+      border: 1px solid #1d232f;
       border-radius: 10px;
-      border: 1px solid #1f2125;
-      transition: border 0.3s ease;
+      padding: 24px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .card:hover {
-      border-color: #3b4252;
+      transform: translateY(-5px);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
     }
 
     .card h3 {
-      font-size: 1.1em;
-      font-weight: 500;
-      color: #aabaff;
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: #77b6ff;
       margin-bottom: 10px;
     }
 
     .card p {
-      font-size: 0.95em;
-      color: #c6c9cf;
-      margin-bottom: 10px;
-      line-height: 1.5;
+      font-size: 0.95rem;
+      color: #c4c9d4;
+      line-height: 1.6;
     }
 
     footer {
       text-align: center;
-      color: #7a7f89;
-      font-size: 0.9em;
-      padding: 40px 0 20px;
+      padding: 60px 0 30px;
+      font-size: 0.9rem;
+      color: #6f7a8b;
+      border-top: 1px solid #1c222f;
+      margin-top: 80px;
+    }
+
+    /* Optional Placeholder for a Future AI Bot */
+    .ai-agent {
+      background: #10161f;
+      border: 1px dashed #2a3545;
+      padding: 30px;
+      margin-top: 40px;
+      border-radius: 10px;
+      text-align: center;
+      color: #9fa9b9;
+      font-style: italic;
     }
   </style>
 </head>
 
 <body>
+
   <header>
     <h1>Nawel ZAIT</h1>
     <p class="subtitle">AI & Data Science – Institut Polytechnique de Paris</p>
-    <p class="intro">
-      Final-year Master's student seeking a 6-month research internship and full-time position in Artificial Intelligence, Machine Learning, or Data Science.
-    </p>
+    <p class="intro">Final-year master's student seeking a 6-month internship and full-time position in Artificial Intelligence, Machine Learning, or Data Science.</p>
   </header>
 
   <section>
@@ -132,49 +165,54 @@
     <div class="projects">
       <div class="card">
         <h3>Fine-Tuning a Small Language Model for Medical Text Summarization</h3>
-        <p>Trained a lightweight transformer model to generate summaries of French medical reports using synthetic data. Focused on domain-specific terminology and semantic preservation.</p>
+        <p>Fine-tuned an SLM to summarize French medical documents using LLM-generated synthetic data. Focused on semantic precision and domain-specific terminology.</p>
         <p><a href="https://github.com/ineszait/medical-text-summarization" target="_blank">View on GitHub →</a></p>
       </div>
 
       <div class="card">
         <h3>Sub-Event Detection in FIFA World Cup Tweets</h3>
-        <p>Built models to detect events (e.g., goals, red cards) from live tweet streams. Used GloVe embeddings with logistic regression and minute-based segmentation.</p>
+        <p>Developed ML models to detect goals, red cards, and other events from tweet streams using GloVe embeddings and logistic regression.</p>
         <p><a href="https://github.com/ineszait/fifa-subevent-detection" target="_blank">View on GitHub →</a></p>
       </div>
 
       <div class="card">
         <h3>Text-to-SQL using Language Models</h3>
-        <p>Explored prompt engineering and few-shot learning to translate natural language questions into SQL queries. Compared rule-based and neural approaches on benchmark databases.</p>
+        <p>Prompt-engineered LLMs to translate natural language queries into SQL. Benchmarked rule-based and neural methods on structured datasets.</p>
         <p><a href="https://github.com/ineszait/text-to-sql" target="_blank">View on GitHub →</a></p>
       </div>
 
       <div class="card">
         <h3>Reinforcement Learning for Quoridor AI</h3>
-        <p>Implemented RL agents using Minimax and MCTS to play Quoridor. Introduced heuristics for wall placement and path blocking to improve strategic behavior.</p>
+        <p>Built agents with Minimax and MCTS. Introduced heuristics for path obstruction and improved strategic gameplay efficiency.</p>
         <p><a href="https://github.com/ineszait/quoridor-ai" target="_blank">View on GitHub →</a></p>
       </div>
     </div>
   </section>
 
-  <section id="research">
+  <section>
     <h2>Research Projects</h2>
     <div class="projects">
       <div class="card">
         <h3>Neural Modeling of Screen-Induced Health Disruptions</h3>
-        <p>Bridged neuroscience and AI by modeling the effects of screen exposure using Neural ODEs, LSTMs, and GRUs. Used time-series data to predict stress, attention, and sleep quality.</p>
+        <p>Bridged neuroscience and AI by modeling stress and cognitive changes from screen overexposure using Neural ODEs, LSTM, GRU on GLOBEM time-series data.</p>
         <p><a href="https://github.com/ineszait/screen-exposure-modeling" target="_blank">View on GitHub →</a></p>
       </div>
 
       <div class="card">
         <h3>Adversarial Learning for Cryptographic Protocol Analysis</h3>
-        <p>Applied adversarial ML to test the robustness of cryptographic protocols. Designed adaptive attack strategies to expose vulnerabilities and inform secure protocol design.</p>
+        <p>Used adversarial ML techniques to probe cryptographic protocol weaknesses, generating adaptive attacks and enhancing resilience testing.</p>
         <p><a href="#" target="_blank">Coming soon</a></p>
       </div>
     </div>
   </section>
 
+  <section class="ai-agent">
+    AI agent coming soon — exploring ways to integrate interactive models (chatbot, recommender, personal assistant).
+  </section>
+
   <footer>
     © Nawel ZAIT · 2025
   </footer>
+
 </body>
 </html>
