--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     body {
       font-family: 'Satoshi', sans-serif;
-      background-color: #0d1117;
+      background-color: #062E2E;
       color: #d0d6e0;
       line-height: 1.7;
       font-size: 16px;
@@ -91,7 +91,7 @@
     h2 {
       font-size: 1.6rem;
       font-weight: 600;
-      color: #4ea0f3;
+      color: #EDEBEB;
       margin-bottom: 40px;
       text-transform: uppercase;
       letter-spacing: 1px;
