Change card text color to #DFEBF5

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     .card h3 {
       font-size: 1.15rem;
       font-weight: 600;
-      color: #73baff;
+      color: #DFEBF5;
       margin-bottom: 10px;
     }
 
     .card p {
       font-size: 0.95rem;
-      color: #c3c9d6;
+      color: #DFEBF5;
       line-height: 1.6;
     }
 
