Update subtitle to specify 'Artificial intelligence'

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
   <header>
     <h1>Nawel ZAIT</h1>
-    <p class="subtitle">AI & Data Science — Institut Polytechnique de Paris</p>
+    <p class="subtitle">Artificial intelligence & Data  — Institut Polytechnique de Paris</p>
     <p class="intro">Final-year master's student seeking a 6-month internship and full-time role in Artificial Intelligence, Machine Learning, or Data Science.</p>
   </header>
 
